fix: desktop alignment

--- a/intro-section-with-dropdown-navigation-main/styles/style.scss
+++ b/intro-section-with-dropdown-navigation-main/styles/style.scss
@@ -121,6 +121,7 @@ $tertiary-black: hsl(0, 0%, 8%);
 }
 
 .container {
+  float: left;
   margin: 19vh 0 0 10vw;
 }
 
@@ -129,10 +130,10 @@ $tertiary-black: hsl(0, 0%, 8%);
 }
 
 .hero-image {
-  position: relative;
   float: right;
-  width: 30%;
+  width: 28%;
   height: auto;
+  margin: 5vh 10vw 0 0;
 }
 
 p {
@@ -141,6 +142,8 @@ p {
 }
 
 .sponsors-container {
+  margin-top: 10vh;
+  margin-left: -1vw;
 }
 
 .sponsor__sponsor-img > img {
@@ -148,8 +151,13 @@ p {
 }
 
 .attribution {
-  font-size: 11px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: auto;
   text-align: center;
+  font-size: 11px;
 }
 .attribUtion a {
   color: hsl(228, 45%, 44%);
